Pin deterministic R1b immutable bundle serialization